Added Confirm Mail Controller (Controllers), Added  Confirm View Model (Models) and Comfirm Mail (View)

--- a/EasyCashIdentityProject.PresentationLayer/EasyCashIdentityProject.PresentationLayer.csproj
+++ b/EasyCashIdentityProject.PresentationLayer/EasyCashIdentityProject.PresentationLayer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8d1e7cc3-ff5c-48ea-85b1-4570711cdd9f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -201,6 +202,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
+    <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
